[project]
name = "k3nkimagegrab"
description = "Standalone ComfyUI node to grab the last N frames from a directory as a single batch with optional frame stride, designed for video continuation workflows and temporal consistency improvement."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["Pillow>=9.0.0", "torch>=1.10.0", "numpy>=1.21.0"]

[project.urls]
Repository = "https://github.com/K3NK3/ComfyUI-K3NKImageGrab"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/K3NK3/ComfyUI-K3NKImageGrab/wiki"
"Bug Tracker" = "https://github.com/K3NK3/ComfyUI-K3NKImageGrab/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-K3NKImageGrab"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

